Changing the TF procedure, it now depends on a modifiable XML file. More customization!
Signed-off-by: TesterTheDog <TesterTheDog@gmail.com>

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,3 @@
-/Constants.class
-/Player.class
-/Round.class
-/TheTFBot.class
-/thePlayer.class
-/TF_XML.txt
-/TF.xml
+/TransformationFactory.class
+/TransformationType.class
+/TFGame.class
